<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:tools="http://schemas.android.com/tools"
    xmlns:android="http://schemas.android.com/apk/res/android"
    >
    <data>

        <variable
            name="user"
            type="com.azmeer.knilacrud.models.UserModel" />
    </data>

<RelativeLayout
    android:id="@+id/login_container"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    >
    <include android:id="@+id/toolbarLogin"
        layout="@layout/toolbar"/>

    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@+id/toolbarLogin"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:fillViewport="true">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_centerInParent="true"
            android:gravity="center_vertical"
            android:orientation="vertical"
            android:paddingStart="@dimen/margin_start"
            android:paddingEnd="@dimen/margin_start">


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">
                <ImageView
                    android:layout_width="100dp"
                    android:layout_height="100dp"
                    android:src="@drawable/knilalogo"
                    android:layout_gravity="center"

                    />

                <androidx.appcompat.widget.AppCompatTextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:gravity="center_vertical"
                    android:layout_gravity="center"
                    android:includeFontPadding="false"
                    android:text="@string/welcome_back"
                    android:textColor="@color/black"
                    android:textSize="@dimen/_16sdp"
                    android:textStyle="normal" />

                <androidx.appcompat.widget.AppCompatTextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/_3sdp"
                    android:gravity="start"
                    android:layout_gravity="center"
                    android:includeFontPadding="false"
                    android:text="@string/signin_to_continue"
                    android:textColor="@color/newColorLightHint"
                    android:textSize="@dimen/normal_text"
                    android:textStyle="normal" />


            </LinearLayout>


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_32sdp"
                android:background="@drawable/d_bottom_et_gray_line"
                android:orientation="vertical">

                <androidx.appcompat.widget.AppCompatTextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:gravity="center_vertical"
                    android:includeFontPadding="false"
                    android:text="@string/your_email"
                    android:textColor="@color/newColorDarkHint"
                    android:textSize="@dimen/normal_text"
                    android:textStyle="normal" />

                <androidx.appcompat.widget.AppCompatEditText
                    android:id="@+id/et_email"
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/_28sdp"
                    android:background="@null"
                    android:gravity="center_vertical"
                    android:hint="@string/enter_your_email"
                    android:importantForAutofill="no"
                    android:includeFontPadding="false"
                    android:inputType="textEmailAddress"
                    android:paddingTop="@dimen/_2sdp"
                    android:paddingBottom="@dimen/_2sdp"
                    android:text=""
                    android:textAlignment="viewStart"
                    android:textColor="@color/black"
                    android:textColorHint="@color/newColorLightHint"
                    android:textSize="@dimen/text_size"
                    android:textStyle="normal"
                    tools:ignore="RtlCompat" />


            </LinearLayout>


            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_20sdp"
                android:background="@drawable/d_bottom_et_gray_line">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">

                    <androidx.appcompat.widget.AppCompatTextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:gravity="center_vertical"
                        android:includeFontPadding="false"
                        android:text="@string/pass"
                        android:textColor="@color/newColorDarkHint"
                        android:textSize="@dimen/normal_text"
                        android:textStyle="normal" />


                    <RelativeLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal">

                        <androidx.appcompat.widget.AppCompatEditText
                            android:id="@+id/et_password"
                            android:layout_width="match_parent"
                            android:layout_height="@dimen/_28sdp"
                            android:layout_alignParentStart="true"
                            android:layout_centerVertical="true"
                            android:background="@null"
                            android:gravity="center_vertical"
                            android:hint="@string/enter_your_password"
                            android:importantForAutofill="no"
                            android:includeFontPadding="false"
                            android:inputType="textPassword"
                            android:paddingTop="@dimen/_2sdp"
                            android:paddingBottom="@dimen/_2sdp"
                            android:text=""
                            android:textAlignment="viewStart"
                            android:textColor="@color/black"
                            android:textColorHint="@color/newColorLightHint"
                            android:textSize="@dimen/text_size"
                            android:textStyle="normal"
                            tools:ignore="RtlCompat" />

                    </RelativeLayout>


                </LinearLayout>


            </RelativeLayout>

            <LinearLayout
                android:id="@+id/btn_login"
                android:layout_width="match_parent"
                android:layout_height="@dimen/button_height"
                android:layout_marginTop="@dimen/_20sdp"
                android:background="@drawable/ractengle_less_round_solid_primary"
                android:gravity="center"
                android:orientation="vertical">

                <androidx.appcompat.widget.AppCompatTextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:includeFontPadding="false"
                    android:text="@string/str_login"
                    android:textAllCaps="false"
                    android:textColor="@color/newColorWhite"
                    android:textSize="@dimen/text_size"
                    android:textStyle="normal" />


            </LinearLayout>

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/tv_register"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="@dimen/_9sdp"
                android:gravity="center"
                android:includeFontPadding="false"
                android:paddingTop="@dimen/_5sdp"
                android:paddingBottom="5dp"
                android:text="@string/dont_have_account"
                android:textAllCaps="false"
                android:textColor="@color/newColorDarkHint"
                android:textSize="@dimen/text_size"
                android:textStyle="normal" />


        </LinearLayout>


    </androidx.core.widget.NestedScrollView>


</RelativeLayout>
</layout>