<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:android="http://schemas.android.com/apk/res/android">
    <data>

        <variable
            name="user"
            type="com.azmeer.knilacrud.models.UserModel" />
    </data>

<RelativeLayout
    android:id="@+id/reg_fl_id"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    >
    <include android:id="@+id/toolbarSignup" layout="@layout/toolbar"/>
    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@+id/toolbarSignup"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:fillViewport="true">


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:paddingStart="@dimen/margin_start"
            android:paddingEnd="@dimen/margin_end">


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_62sdp"
                android:orientation="vertical">

                <androidx.appcompat.widget.AppCompatTextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:includeFontPadding="false"
                    android:text="@string/signup_to_continue"
                    android:textColor="@color/black"
                    android:textSize="@dimen/_16sdp"
                    android:textStyle="normal" />




            </LinearLayout>

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_gravity="center"
                android:layout_marginTop="@dimen/activity_vertical_margin"
                android:layout_height="wrap_content">

                <de.hdodenhof.circleimageview.CircleImageView
                    android:id="@+id/iv_profile"
                    android:layout_width="100dp"
                    android:layout_height="100dp"
                    android:src="@drawable/ic_user_placeholder"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintHorizontal_bias="0.525"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <androidx.appcompat.widget.AppCompatImageView
                    android:id="@+id/iv_add_profile_img"
                    android:layout_width="29dp"
                    android:layout_height="31dp"
                    android:background="@drawable/bg_white_circular"
                    android:elevation="@dimen/default_elevation"
                    android:padding="4dp"
                    android:scaleType="center"
                    android:tint="@color/App_color"
                    app:layout_constraintCircle="@id/iv_profile"
                    app:layout_constraintCircleAngle="135"
                    app:layout_constraintCircleRadius="40dp"
                    app:layout_constraintEnd_toEndOf="@id/iv_profile"
                    app:layout_constraintStart_toStartOf="@id/iv_profile"
                    app:layout_constraintTop_toBottomOf="@+id/iv_profile"
                    android:src="@drawable/ic_baseline_camera_alt_24"
                    app:tint="@color/black" />
            </androidx.constraintlayout.widget.ConstraintLayout>

            <androidx.appcompat.widget.AppCompatTextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"

                android:layout_marginTop="7dp"
                android:gravity="center"
                android:includeFontPadding="false"
                android:text="@string/uploadProfilePhoto"
                android:textColor="@color/newColorDarkHint"
                android:textSize="@dimen/normal_text"
                android:textStyle="normal" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_20sdp"
                android:orientation="horizontal"
                android:weightSum="10">

                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="4.5"
                    android:background="@drawable/d_bottom_et_gray_line"
                    android:orientation="vertical">

                    <androidx.appcompat.widget.AppCompatTextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:gravity="center_vertical"
                        android:includeFontPadding="false"
                        android:text="@string/first_name"
                        android:textColor="@color/newColorDarkHint"
                        android:textSize="@dimen/normal_text"
                        android:textStyle="normal" />

                    <androidx.appcompat.widget.AppCompatEditText
                        android:id="@+id/et_fname"
                        android:layout_width="match_parent"
                        android:layout_height="@dimen/_28sdp"
                        android:background="@null"
                        android:gravity="center_vertical"
                        android:hint="Enter your First Name"
                        android:imeOptions="actionNext"
                        android:importantForAutofill="no"
                        android:includeFontPadding="false"
                        android:inputType="textPersonName"
                        android:paddingTop="@dimen/_2sdp"
                        android:paddingBottom="@dimen/_2sdp"
                        android:singleLine="true"
                        android:text=""
                        android:textAlignment="viewStart"
                        android:textColor="@color/black"
                        android:textColorHint="@color/newColorLightHint"
                        android:textSize="@dimen/text_size"
                        android:textStyle="normal"
                        tools:ignore="RtlCompat" />


                </LinearLayout>

                <View
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1" />

                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="4.5"
                    android:background="@drawable/d_bottom_et_gray_line"
                    android:orientation="vertical">

                    <androidx.appcompat.widget.AppCompatTextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:gravity="center_vertical"
                        android:includeFontPadding="false"
                        android:text="@string/last_name"
                        android:textColor="@color/newColorDarkHint"
                        android:textSize="@dimen/normal_text"
                        android:textStyle="normal" />

                    <androidx.appcompat.widget.AppCompatEditText
                        android:id="@+id/et_lname"
                        android:layout_width="match_parent"
                        android:layout_height="@dimen/_28sdp"
                        android:background="@null"
                        android:gravity="center_vertical"
                        android:hint="Enter your Last Name"
                        android:imeOptions="actionNext"
                        android:importantForAutofill="no"
                        android:includeFontPadding="false"
                        android:inputType="textPersonName"
                        android:paddingTop="@dimen/_2sdp"
                        android:paddingBottom="@dimen/_2sdp"
                        android:singleLine="true"
                        android:text=""
                        android:textAlignment="viewStart"
                        android:textColor="@color/black"
                        android:textColorHint="@color/newColorLightHint"
                        android:textSize="@dimen/text_size"
                        android:textStyle="normal"
                        tools:ignore="RtlCompat" />


                </LinearLayout>

            </LinearLayout>


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_20sdp"
                android:background="@drawable/d_bottom_et_gray_line"
                android:orientation="vertical">

                <androidx.appcompat.widget.AppCompatTextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:gravity="center_vertical"
                    android:includeFontPadding="false"
                    android:text="@string/your_email"
                    android:textColor="@color/newColorDarkHint"
                    android:textSize="@dimen/normal_text"
                    android:textStyle="normal" />

                <androidx.appcompat.widget.AppCompatEditText
                    android:id="@+id/et_email"
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/_28sdp"
                    android:background="@null"
                    android:gravity="center_vertical"
                    android:hint="@string/enter_your_email"
                    android:imeOptions="actionNext"
                    android:importantForAutofill="no"
                    android:includeFontPadding="false"
                    android:inputType="textEmailAddress"
                    android:paddingTop="@dimen/_2sdp"
                    android:paddingBottom="@dimen/_2sdp"
                    android:singleLine="true"
                    android:text=""
                    android:textAlignment="viewStart"
                    android:textColor="@color/black"
                    android:textColorHint="@color/newColorLightHint"
                    android:textSize="@dimen/text_size"
                    android:textStyle="normal"
                    tools:ignore="RtlCompat" />


            </LinearLayout>


            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_20sdp"
                android:background="@drawable/d_bottom_et_gray_line">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">

                    <androidx.appcompat.widget.AppCompatTextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:gravity="center_vertical"
                        android:includeFontPadding="false"
                        android:text="@string/pass"
                        android:textColor="@color/newColorDarkHint"
                        android:textSize="@dimen/normal_text"
                        android:textStyle="normal" />


                    <RelativeLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal">

                        <androidx.appcompat.widget.AppCompatEditText
                            android:id="@+id/et_password"
                            android:layout_width="match_parent"
                            android:layout_height="@dimen/_28sdp"
                            android:layout_alignParentStart="true"
                            android:layout_centerVertical="true"
                            android:layout_toStartOf="@+id/ll_hide"
                            android:background="@null"
                            android:gravity="center_vertical"
                            android:hint="@string/enter_your_password"
                            android:imeOptions="actionNext"
                            android:importantForAutofill="no"
                            android:includeFontPadding="false"
                            android:inputType="textPassword"
                            android:paddingTop="@dimen/_2sdp"
                            android:paddingBottom="@dimen/_2sdp"
                            android:singleLine="true"
                            android:text=""
                            android:textAlignment="viewStart"
                            android:textColor="@color/black"
                            android:textColorHint="@color/newColorLightHint"
                            android:textSize="@dimen/text_size"
                            android:textStyle="normal"
                            tools:ignore="RtlCompat" />


                    </RelativeLayout>


                </LinearLayout>


            </RelativeLayout>

            <LinearLayout
                android:id="@+id/btn_register"
                android:layout_width="match_parent"
                android:layout_height="@dimen/button_height"
                android:layout_marginTop="@dimen/_30sdp"
                android:background="@drawable/ractengle_less_round_solid_primary"
                android:gravity="center"
                android:orientation="vertical">

                <androidx.appcompat.widget.AppCompatTextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:gravity="center"
                    android:includeFontPadding="false"
                    android:text="@string/str_register"
                    android:textAllCaps="false"
                    android:textColor="@color/newColorWhite"
                    android:textSize="@dimen/text_size"
                    android:textStyle="normal" />


            </LinearLayout>


        </LinearLayout>


    </androidx.core.widget.NestedScrollView>


</RelativeLayout>
</layout>